--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -12,7 +12,7 @@
   <link href="/css/style.css?v={{commitHash}}" rel="stylesheet">
 </head>
 <body >
-  <div class="popup-notes" id="popupNotes">
+  <div class="popup-notes d-hide" id="popupNotes">
     <span data-tmpl="note fs15">
       <div class="note-indicator d-inline-block" data-tmpl="indicator"></div>
       <span data-tmpl="text"></span>
