--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -89,7 +89,7 @@
     {{- /* ACTIONS */ -}}
     <div class="fs18 demi pt-4 pb-2 d-hide" id="actionsLabel">[[[Actions]]]</div>
     <div class="d-flex align-items-stretch justify-content-start flex-wrap">
-      <button id="accelerateBttn" type="button" class="px-2 py-1 fs15 selected d-hide">[[[accelerate]]]</button>
+      <button id="accelerateBttn" type="button" class="px-2 py-1 fs15 go d-hide">[[[accelerate]]]</button>
     </div>
 
     {{- /* MATCHES */ -}}
