--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -77,7 +77,7 @@
         </div>
 
         <div class="d-flex justify-content-end my-1">
-          <button id="qcErrAck" class="selected">[[[Continue]]]</button>
+          <button id="qcErrAck" class="go">[[[Continue]]]</button>
         </div>
       </div>
     </form>
