--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -705,7 +705,7 @@
           </div>
           <span class="col-3 hide-pw"></span> {{/* flex dummy */}}
           <div class="d-grid align-items-end col-10 p-0">
-            <button id="unapproveTokenSubmit" type="button" class="justify-content-center fs15 selected">[[[Submit]]]</button>
+            <button id="unapproveTokenSubmit" type="button" class="justify-content-center fs15 go">[[[Submit]]]</button>
           </div>
         </div>
       </div>
@@ -725,7 +725,7 @@
       </div>
       <div class="d-flex justify-content-end mt-4">
         <button id="cancelForce" type="button" class="justify-content-center fs15 danger mx-1">[[[cancel]]]</button>
-        <button id="confirmForceSubmit" type="button" class="justify-content-center fs15 selected mx-2">[[[confirm]]]</button>
+        <button id="confirmForceSubmit" type="button" class="justify-content-center fs15 go mx-2">[[[confirm]]]</button>
       </div>
       <div class="fs15 pt-3 text-center d-hide text-danger" id="confirmForceErr"></div>
     </form>
