prompt custom providers

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -419,6 +419,12 @@
                     <div data-tmpl="bal" class="flex-center"></div>
                   </div>
                 </div>
+                <div data-tmpl="wantProviders" class="flex-stretch-column border-bottom fs16">
+                  <button class="m-2 p-2">
+                    <span class="ico-disconnected me-2"></span>
+                    <span>You should specify a custom API provider</span>
+                  </button>
+                </div>
               </div>
 
               {{- /* REPUTATION */ -}}
