--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -69,7 +69,7 @@
                     </tbody>
                   </table>
                 </div>
-                <div id="sendReceive" class="flex-grow-1 d-flex flex-column justify-content-end align-items-stretch fs22 mt-2 border-bottom">
+                <div id="sendReceive" class="flex-grow-1 d-flex flex-column justify-content-end align-items-stretch fs22 mt-2">
                   <div class="d-flex d-grid justify-content-stretch gap-2 p-2">
                     <button id="receive" class="flex-grow-1 me-1" type="button">
                       <small class="ico-qrcode me-1"></small>
@@ -83,7 +83,7 @@
                 </div>
               </div>
 
-              <div class="d-flex justify-content-start align-items-stretch flex-column border-start col-sm-24 col-md-12 p-3" id="walletInfo">
+              <div class="d-flex justify-content-start align-items-stretch flex-column border-start col-sm-24 col-md-12 p-2" id="walletInfo">
                 <table id="walletInfoTable" class="fs14 w-100">
                   <tbody>
                     <tr id="statusLocked">
@@ -137,6 +137,10 @@
                     [[[Settings]]]
                   </button>
                 </div>
+                <button id="needsProviderBttn" class="flex-center mt-2 lh1 fs17">
+                  <span class="ico-disconnected text-warning demi me-2"></span>
+                  <span>Add a custom API provider</span>
+                </button>
               </div>
             </div>
 
