--- a/client/webserver/site/src/css/variables.scss
+++ b/client/webserver/site/src/css/variables.scss
@@ -35,3 +35,4 @@ $font-family-monospace: "mono", "monospace";
 @import "~bootstrap/scss/variables";
 
 $enable-dark-mode: false;
+// $enable-important-utilities: false;
