--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -99,7 +99,7 @@
             <span class="ico-info fs12 ms-1" data-tooltip="[[[buy_placements_tooltip]]]"></span>
           </div>
           <div class="d-flex flex-column" id="buyPlacementsTableWrapper">
-            <table class="cell-border">
+            <table class="cell-border compact">
               <thead>
                 <th class="no-stretch">[[[priority]]]</th>
                 <th>[[[Lots]]]</th>
@@ -111,21 +111,18 @@
                   <td data-tmpl="priority"></td>
                   <td data-tmpl="lots"></td>
                   <td data-tmpl="gapFactor"></td>
-                  <td class="no-stretch">
-                    <span data-tmpl="removeBtn" class="ico-cross fs15 pointer"></span>
-                    <span data-tmpl="upBtn" class="ico-arrowup fs15 pointer"></span>
-                    <span
-                      class="ico-arrowdown fs15 pointer"
-                      data-tmpl="downBtn"
-                    ></span>
+                  <td class="no-stretch text-start text-nowrap">
+                    <span data-tmpl="removeBtn" class="ico-cross fs15 pointer px-2"></span>
+                    <span data-tmpl="upBtn" class="ico-arrowup fs15 pointer px-2"></span>
+                    <span data-tmpl="downBtn" class="ico-arrowdown fs15 pointer px-2"></span>
                   </td>
                 </tr>
                 <tr id="addBuyPlacementRow">
                   <td></td>
                   <td><input id="addBuyPlacementLots" class="lots-input p-2" step="1" type="number"></td>
                   <td><input id="addBuyPlacementGapFactor" class="gap-factor-input p-2" type="number"></td>
-                  <td class="no-stretch">
-                    <span id="addBuyPlacementBtn" class="ico-plus fs15 pointer"></span>
+                  <td class="no-stretch text-start">
+                    <span id="addBuyPlacementBtn" class="ico-plus fs15 pointer p-2"></span>
                   </td>
                 </tr>
               </tbody>
@@ -140,7 +137,7 @@
             <span class="ico-info fs12 ms-1" data-tooltip="[[[sell_placements_tooltip]]]"></span>
           </div>
           <div class="d-flex flex-column" id="sellPlacementsTableWrapper">
-            <table class="cell-border">
+            <table class="cell-border compact">
               <thead>
                 <th class="no-stretch">[[[priority]]]</th>
                 <th>[[[Lots]]]</th>
@@ -153,7 +150,7 @@
                   <td><input id="addSellPlacementLots" class="lots-input p-2" step="1" type="number"></td>
                   <td><input id="addSellPlacementGapFactor" class="gap-factor-input p-2" type="number"></td>
                   <td class="no-stretch">
-                    <span id="addSellPlacementBtn" class="ico-plus fs15 pointer"></span>
+                    <span id="addSellPlacementBtn" class="ico-plus fs15 pointer p-2"></span>
                   </td>
                 </tr>
               </tbody>
@@ -168,7 +165,7 @@
       </div>
 
       {{- /* QUICK CONFIG */ -}}
-      <div id="quickConfig">
+      <div id="quickConfig" class="d-hide">
         <div class="d-flex justify-content-between lh1 py-3 border-bottom">
           <span class="fs22">[[[Quick Configuration]]]</span>
           <div id="switchToAdvanced" class="p-1 flex-center hoverbg pointer">
@@ -405,7 +402,7 @@
           <div id="orderPersistenceContainer" class="slider-container"></div>
         </div>
 
-        <div class="settings-card">
+        <div id="emptyMarketRateBox" class="settings-card">
           <label for="emptyMarketRateCheckbox" class="fs18 d-flex align-items-center justify-content-between w-100">
             <div class="flex-center">
               <input type="checkbox" id="emptyMarketRateCheckbox" class="form-check-input me-2 mt-0" checked>
