--- a/client/webserver/site/src/html/mmlogs.tmpl
+++ b/client/webserver/site/src/html/mmlogs.tmpl
@@ -20,22 +20,6 @@
         <div id="endTime" class="border-bottom py-1 px-3"></div>
       </div>
       <div class="order-datum border my-1 me-2">
-        <div class="border-bottom py-1 px-3">[[[base_change]]]</div>
-        <div class="py-1 px-3"><span id="baseChange"></span> <img id="baseChangeLogo"></div>
-      </div>
-      <div class="order-datum border my-1 me-2">
-        <div class="border-bottom py-1 px-3">[[[quote_change]]]</div>
-        <div class="py-1 px-3"><span id="quoteChange"></span> <img id="quoteChangeLogo"></div>
-      </div>
-      <div class="order-datum border my-1 me-2">
-        <div class="border-bottom py-1 px-3">[[[base_fees]]]</div>
-        <div class="py-1 px-3"><span id="baseFees"></span> <img id="baseFeesLogo"></div>
-      </div>
-      <div class="order-datum border my-1 me-2">
-        <div class="border-bottom py-1 px-3">[[[quote_fees]]]</div>
-        <div class="py-1 px-3"><span id="quoteFees"></span> <img id="quoteFeesLogo"></div>
-      </div>
-      <div class="order-datum border my-1 me-2">
         <div class="border-bottom py-1 px-3">[[[profit_loss]]]</div>
         <div class="py-1 px-3" id="profitLoss"></div>
       </div>
@@ -89,7 +73,7 @@
         <span>[[[Side]]]</span>
         <span id="dexOrderSide"></span>
       </span>
-      <table id="dexOrderTxsTable" class="my-3">
+      <table id="dexOrderTxsTable" class="my-3 striped row-hover compact border row-border">
         <thead>
           <th scope="col">[[[ID]]]</th>
           <th scope="col">[[[Type]]]</th>
