--- a/client/webserver/site/src/css/utilities.scss
+++ b/client/webserver/site/src/css/utilities.scss
@@ -200,6 +200,10 @@ div.clear {
   user-select: all;
 }
 
+.user-select-none {
+  user-select: none;
+}
+
 .text-danger {
   color: var(--text-danger);
 }
